<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Networker</string>
    <string name="hello_world">Tap another Device</string>
    <string name="menu_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="social_button">Social</string>
    <string name="title_activity_send_page">SendPage</string>
    <string name="title_activity_received_data">ReceivedDataActivity</string>
    <string name="title_activity_received">ReceivedActivity</string>
    <string name="send_page_string">Sending data page</string>
    <string name="action_settings">Settings</string>
    <!-- Profile Page Details -->
    <string name="profile_button">profile</string>
    <string name="create_message">Create your business card</string>
    <string name="personal_output">Personal Details</string>
    <string name="name_input">FirstName LastName</string>
    <string name="email_input">Email</string>
    <string name="phone_input">Phone No</string>
    <string name="professional_details_output">Professional Details</string>
    <string name="designation_input">Designation</string>
    <string name="department_input">Department</string>
    <string name="company_name_input">Company Name</string>
    <string name="submit_button">Submit</string>
    <string name="company_address_input">Company address</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_contacts">Contacts</string>
    <!-- Social Media Details -->
    <string name="social_media_details">Social Media Details</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="twitter_account">Twitter Account</string>
    <string name="linkedin_account">LinkedIn Account</string>
    <!-- editable-text -->
    <string name="create_event">Event Name</string>
    <string name="title_activity_social">SocialActivity</string>
    <!-- Social Page -->
    <string name="authorize_linkedin_button">Authorize LinkedIn</string>
    
    <string name="twitter_button">Authorize Twitter</string>
    <string name="edit_text_social">Enter authorization code</string>
    <string name="submitButton">Submit</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="title_activity_linked_in">LinkedInActivity</string>
    <string name="title_activity_display_list">DisplayList</string>
    <string name="title_activity_list_view_loader">ListViewLoader</string>

</resources>