<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SocialActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" />
     <Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/twitter_button"
        	android:onClick="authenticateTwitter"/>
	<Button android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/submitButton"
        	android:onClick="authCodeEntered"
        	android:id="@+id/submitButton"
        	android:layout_marginTop="100dp"/>
	<EditText android:layout_width="wrap_content"
	    	  android:layout_height="wrap_content"
	    	  android:hint="@string/edit_text_social"
	    	  android:id="@+id/auth_code_text_field"
	    	  android:layout_marginTop="200dp"/>
</RelativeLayout>